# server/prices/serializers.py
@@ -5,3 +5,9 @@ class CoffeePriceSerializer(serializers.ModelSerializer):
     class Meta:
         model = CoffeePrice
         fields = ['month', 'year', 'price', 'last_day_fixation']
+
+
+class FuturesPriceSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = CoffeePrice
+        fields = ['name', 'price']
