# server/prices/urls.py
@@ -1,6 +1,7 @@
 from django.urls import path
-from .views import CoffeePriceView
+from .views import CoffeePriceView, FuturesPrice
 
 urlpatterns = [
-    path('', CoffeePriceView.as_view(), name='price'),
+    path('prices/', CoffeePriceView.as_view(), name='price'),
+    path('futures/', FuturesPrice.as_view(), name='futures'),
 ]
